Exam/mywd-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mywd-dep
  labels:
    app: mywd-dep
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 3
      maxSurge: 3
  minReadySeconds: 20
  replicas: 2
  selector:
    matchLabels:
      app: mywd-dep
  template:
    metadata:
      labels:
        app: mywd-dep
    spec:
      containers:
      - image: wordpress:latest
        name: mynapp

        resources:
          requests:
            cpu: 50m
            memory: 5Mi
          limits:
            cpu: 100m
            memory: 20Mi
            
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: wd-vol
          mountPath: /var/www/html

        readinessProbe:
          exec:
            command:
            - ls
            - /var/www/html
        livenessProbe:
          httpGet:
            path: /
            port: 80

      volumes:
      - name: wd-vol
        persistentVolumeClaim:
          claimName: mywd-pvc-cephfs
